# renumber

./: Cargo.toml  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-manual.yml  build-windows.yml  linux.yml  musl.yml
docs/: README.md
manual/: book.toml
manual/src/: SUMMARY.md
manual/src/integration-jetbrains/: integration-jetbrains.md
src/: lib.rs  main.rs
tests/: test_doc.rs  test_renumber.rs  test_tokenize.rs
