[package]
name = "renumber"
version = "0.1.0"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Renumber tests or benchmarks"
documentation = "https://docs.rs/renumber"
repository = "https://github.com/EngosSoftware/renumber.git"
keywords = ["renumber", "tests", "benches"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "renumber"
path = "src/lib.rs"

[[bin]]
name = "renumber"
path = "src/main.rs"
