[package]
name = "renumber"
version = "0.1.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Renumber tests or benchmarks"
documentation = "https://docs.rs/renumber"
repository = "https://github.com/EngosSoftware/renumber.git"
keywords = ["renumber", "tests", "benches"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "NOTES_AT_FUTURE_ME.md"
]

[lib]
name = "renumber"
path = "src/lib.rs"

[[bin]]
name = "renumber"
path = "src/main.rs"
