[package]
name = "renumber"
version = "0.1.3"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Renumber Rust tests or benchmarks"
documentation = "https://docs.rs/renumber"
repository = "https://github.com/EngosSoftware/renumber.git"
keywords = ["renumber", "tests", "benchmarks"]
categories = ["command-line-utilities"]
homepage = "https://engossoftware.github.io/renumber/"
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "CODE_OF_CONDUCT.md",
    "manual/"
]

[lib]
name = "renumber"
path = "src/lib.rs"

[[bin]]
name = "renumber"
path = "src/main.rs"
